# simpleirc-lens

./: .travis.yml  README.md  simpleirc-lens.cabal
src/Network/SimpleIRC/Core/: Lens.hs
src/Network/SimpleIRC/Messages/: Lens.hs
