name:                simpleirc-lens
version:             0.1.0.0
synopsis:            Lenses for simpleirc types
description:
  Provides lenses for types in the
  <https://hackage.haskell.org/package/simpleirc simpleirc> package without
  depending on <https://hackage.haskell.org/package/lens lens>.
homepage:            https://github.com/relrod/simpleirc-lens
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (C) 2014 Ricky Elrod
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.SimpleIRC.Core.Lens
                       Network.SimpleIRC.Messages.Lens
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , simpleirc >= 0.3 && < 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
